@@ -1,3 +1,15 @@
+Mon Nov 15 11:12:22 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * connectors/dds4ccm/impl/DataReaderListener_T.cpp:
+          Initialize listening mask to 0.
+
+        * connectors/dds4ccm/impl/ndds/DataReader_T.cpp:
+          No need to re-assign instance state mask, view state mask and
+          sample mask since they're all unsigned longs.
+
+        * connectors/dds4ccm/impl/ndds/DomainParticipantManager.cpp:
+          don't close down typesupport for now.
+
 Mon Nov 15 11:00:15 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>
 
         * tests/IDL_Test/NonTopic_Connector:
